# LifeLink

./: .gitignore  CMakeLists.txt
docs/: architecture.md
include/: application.h  databaseManager.h  dateUtils.h  distanceCalculator.h  donor.h  donorRepository.h  inputHelper.h  match.h  matcher.h  matchingEngine.h  request.h  requestRepository.h
src/: application.cpp  databaseManager.cpp  dateUtils.cpp  distanceCalculator.cpp  donor.cpp  donorRepository.cpp  inputHelper.cpp  main.cpp  match.cpp  matcher.cpp  matchingEngine.cpp  request.cpp  requestRepository.cpp
